<!--
  ~ Copyright © 2021 92AK
  -->

<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ntak</groupId>
    <artifactId>pearl-zip</artifactId>
    <version>0.0.0.2</version>
    <name>PearlZip Application</name>
    <packaging>pom</packaging>
    <url>https://pearlzip.92ak.co.uk</url>

    <properties>
        <log4j.version>2.14.0</log4j.version>
        <junit.version>5.5.2</junit.version>
        <junit-platform-runner.version>1.5.2</junit-platform-runner.version>
        <dryrun.release>true</dryrun.release>
        <eventbus.version>3.2.0</eventbus.version>
        <pearlzip.next.version>${project.version}</pearlzip.next.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.deploy.skip>true</maven.deploy.skip>
        <mockito-core.version>3.9.0</mockito-core.version>
        <testfx.version>4.0.16-alpha</testfx.version>
        <openjfx-monocle.version>jdk-12.0.1+2</openjfx-monocle.version>
    </properties>

    <modules>
        <module>pearl-zip-lang-pack-en-GB</module>
        <module>pearl-zip-archive</module>
        <module>pearl-zip-archive-acc</module>
        <module>pearl-zip-archive-szjb</module>
        <module>pearl-zip-license</module>
        <module>pearl-zip-ui</module>
        <module>pearl-zip-assembly-osx</module>
        <module>pearl-zip-deploy-common</module>
        <module>ntak-testfx-util</module>
    </modules>

    <licenses>
        <license>
            <name>BSD 3-Clause</name>
            <url>http://opensource.org/licenses/BSD-3-Clause</url>
        </license>
    </licenses>

    <organization>
        <name>92AK</name>
        <url>https://pearlzip.92ak.co.uk</url>
    </organization>
    <developers>
        <developer>
            <id>akakshepati</id>
            <name>Aashutos Kakshepati</name>
            <email>akakshepati@gmail.com</email>
            <url>https://pearlzip.92ak.co.uk</url>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>Europe/London</timezone>
        </developer>
    </developers>

    <repositories>
        <repository>
            <id>Maven Central</id>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Unit Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-runner</artifactId>
            <version>${junit-platform-runner.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito-core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito-core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>openjfx-monocle</artifactId>
            <version>${openjfx-monocle.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>${testfx.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>${testfx.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Miscellaneous -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>en-GB</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <lang>en</lang>
                <country>GB</country>
            </properties>
        </profile>
        <profile>
            <id>fr-FR</id>
            <properties>
                <lang>fr</lang>
                <country>FR</country>
            </properties>
        </profile>
        <profile>
            <id>increment-version</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.google.code.maven-replacer-plugin</groupId>
                        <artifactId>replacer</artifactId>
                        <version>1.5.3</version>
                        <executions>
                            <execution>
                                <id>version-set</id>
                                <phase>validate</phase>
                                <goals>
                                    <goal>replace</goal>
                                </goals>
                                <configuration>
                                    <includes>
                                        <include>${project.basedir}/pom.xml</include>
                                    </includes>
                                    <replacements>
                                        <replacement>
                                            <token>${project.version}</token>
                                            <value>${pearlzip.next.version}</value>
                                        </replacement>
                                    </replacements>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.1</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <tasks>
                                <echo>Next version: ${pearlzip.next.version}</echo>
                            </tasks>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>15</source>
                    <target>15</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                        <includes>
                            <include>**/*TestSuite.class</include>
                        </includes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
